arreglo con turbo

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -19,7 +19,7 @@
             <div class="ms-3">
               <h5 class="mb-1"><%= resume.nombre %></h5>
              <div>
-  <a href="<%= edit_resume_path(resume) %>" class="btn btn-warning btn-sm me-1" title="Edit">
+  <a href="<%= edit_resume_path(resume) %>" class="btn btn-warning btn-sm me-1" title="Edit" data-turbo="false">
     <i class="bi bi-pencil-fill"></i> <!-- Icono de edición -->
   </a>
   
