--- a/app/views/resumes/edit.html.erb
+++ b/app/views/resumes/edit.html.erb
@@ -1,6 +1,6 @@
 <h2 class="text-center my-4 text-primary font-weight-bold">Detalles del Currículum</h2>
 <div class="text-center mb-4">
-  <a href="<%= root_path %>" class="btn btn-outline-primary">
+  <a href="<%= root_path %>" class="btn btn-outline-primary" data-turbo="false">
     <i class="bi bi-arrow-left"></i> Regresar
   </a>
 </div>
