roles y permisos implementados, falta ya el CRUD de Usuarios y el datatable

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -2,6 +2,11 @@
   Dashboard
 <% end %>
 
+<%= link_to 'Ir a la Vista Personalizada', custom_view_path %>
+
+
+
+
 <div class="container mt-5">
 
   <%= render 'header' %> <!-- Renderiza el partial de encabezado -->
