--- a/app/views/user_management/index.html.erb
+++ b/app/views/user_management/index.html.erb
@@ -1,32 +1,39 @@
-<h1>Usuarios</h1>
+<h1 class="text-center my-4">Gestión de Usuarios</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Email</th>
-      <th>Rol</th>
-      <th>Acciones</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @users.each do |user| %>
+<div class="container">
+  <!-- Enlaces para crear un nuevo usuario y volver al dashboard -->
+  <div class="d-flex justify-content-between my-3">
+    <%= link_to '<i class="bi bi-house-fill"></i> Ir al Dashboard'.html_safe, root_path, class: 'btn btn-outline-secondary', data: { turbo: false } %>
+
+    <%= link_to '<i class="bi bi-plus-circle-fill"></i> Crear Usuario'.html_safe, custom_view_path, class: 'btn btn-outline-success' %>
+  </div>
+
+  <table class="table table-striped table-hover">
+    <thead class="table-light">
       <tr>
-        <td><%= user.email %></td>
-        <td><%= user.role %></td>
-        <td>
-          <!-- Enlace para editar usuario -->
-          <%= link_to 'Editar', custom_edit_user_path(user), class: 'btn btn-warning ms-2' %>
-
-          <!-- Botón para eliminar usuario -->
-          <%= link_to 'Eliminar', custom_destroy_user_path(user), 
-              method: :delete, 
-              data: { confirm: '¿Estás seguro de que deseas eliminar este usuario?' }, 
-              class: 'btn btn-danger ms-2' %>
-        </td>
+        <th>Email</th>
+        <th>Rol</th>
+        <th>Acciones</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+      <% @users.each do |user| %>
+        <tr>
+          <td><%= user.email %></td>
+          <td><%= user.role %></td>
+          <td>
+            <!-- Enlace para editar usuario -->
+            <%= link_to '<i class="bi bi-pencil-fill"></i> Editar'.html_safe, custom_edit_user_path(user), class: 'btn btn-warning btn-sm' %>
 
-<!-- Enlace para crear un nuevo usuario -->
-<%= link_to 'Crear Usuario', custom_view_path, class: 'btn btn-outline-primary' %>
+            <!-- Botón para eliminar usuario -->
+           <button class="btn btn-danger btn-sm ms-2 delete-user" data-id="<%= user.id %>">
+    <i class="bi bi-trash-fill delete-user" data-id="<%= user.id %>"></i> Eliminar
+  </button>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
+
+<%= javascript_include_tag 'user_management' %>
