--- a/app/views/user_management/new.html.erb
+++ b/app/views/user_management/new.html.erb
@@ -1,26 +1,53 @@
-<h1>Crear Nuevo Usuario</h1>
+<h1 class="text-center my-4">Crear Nuevo Usuario</h1>
 
-<%= form_with(model: @user, url: custom_create_user_path, local: true) do |form| %>
+<div class="container">
+  <div class="card">
+    <div class="card-header">
+      <h5 class="mb-0">Información del Nuevo Usuario</h5>
+    </div>
+    <div class="card-body">
+      <%= form_with(model: @user, url: custom_create_user_path, local: true) do |form| %>
+        
+        <div class="mb-3">
+          <%= form.label :email, class: "form-label" %>
+          <%= form.email_field :email, class: "form-control", required: true %>
+        </div>
 
-  <div>
-    <%= form.label :email %>
-    <%= form.email_field :email %>
-  </div>
-  <div>
-    <%= form.label :password %>
-    <%= form.password_field :password %>
-  </div>
-  <div>
-    <%= form.label :password_confirmation %>
-    <%= form.password_field :password_confirmation %>
-  </div>
-  <div>
-    <%= form.label :role %>
-    <%= form.select :role, ['admin', 'user'] %>
-  </div>
-  <div>
-    <%= form.submit "Crear Usuario" %>
-  </div>
-<% end %>
+        <div class="mb-3">
+          <%= form.label :password, class: "form-label" %>
+          <%= form.password_field :password, class: "form-control", required: true %>
+        </div>
 
+        <div class="mb-3">
+          <%= form.label :password_confirmation, class: "form-label" %>
+          <%= form.password_field :password_confirmation, class: "form-control", required: true %>
+        </div>
 
+        <div class="mb-3">
+          <%= form.label :role, class: "form-label" %>
+          <%= form.select :role, ['user', 'admin'], { include_blank: true }, class: "form-select" %>
+        </div>
+
+        <div class="mb-3">
+          <%= form.label :first_name, class: "form-label" %>
+          <%= form.text_field :first_name, class: "form-control" %>
+        </div>
+
+        <div class="mb-3">
+          <%= form.label :last_name, class: "form-label" %>
+          <%= form.text_field :last_name, class: "form-control" %>
+        </div>
+
+        <div class="mb-3">
+          <%= form.label :occupation, class: "form-label" %>
+          <%= form.text_field :occupation, class: "form-control" %>
+        </div>
+
+        <div class="d-flex justify-content-between mt-4">
+            <%= link_to "Regresar", custom_index_path, class: "btn btn-secondary", data: { turbo: false } %>
+          <%= form.submit "Crear Usuario", class: "btn btn-primary" %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
