--- a/app/views/user_management/index.html.erb
+++ b/app/views/user_management/index.html.erb
@@ -8,7 +8,7 @@
     <%= link_to '<i class="bi bi-plus-circle-fill"></i> Crear Usuario'.html_safe, custom_view_path, class: 'btn btn-outline-success' %>
   </div>
 
-  <table class="table table-striped table-hover">
+  <table id="users_table" class="table table-striped table-hover">
     <thead class="table-light">
       <tr>
         <th>Email</th>
@@ -35,5 +35,21 @@
     </tbody>
   </table>
 </div>
+
+<script>
+    $(document).ready(function() {
+        let table = new DataTable('#users_table', {
+            layout: {
+                topEnd: {
+                    search: {
+                        placeholder: 'Search here...',
+                    }
+                }
+            },
+
+    
+        });
+    });
+</script>
 
 <%= javascript_include_tag 'user_management' %>
